--- a/app/src/main/res/layout/activity_mutil_download.xml
+++ b/app/src/main/res/layout/activity_mutil_download.xml
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="下载列表："/>
+        android:text="启动的线程列表："/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/down_thread_list"
         android:layout_width="match_parent"
